--- a/includes/heroBlock.042715.1.jade
+++ b/includes/heroBlock.042715.1.jade
@@ -19,8 +19,10 @@ section.heroBlock.heroBlock042715
 			//- this is a case where you wrap the div and the p in the link and style the div
 			a(href=viewLookBookLink)
 				div
+					div.slash
 					//- the div will hold the before element
 					p View the Lookbook
+					//- div.slash
 		.fillspace
 
 ////////////////////////////////////////////
