--- a/includes/nav.042715.1.jade
+++ b/includes/nav.042715.1.jade
@@ -61,53 +61,39 @@ header.navMenu.nav042715
 			//- dimensions 55x55px
 			img(src="./images/logo.png", alt="Logo")
 	nav
-		.wrapper
-			//- this each loop doesn't work
-			//- each key,value in navLinkObj
-			//- 	+linkTemplate042115a(key,value)
-
-			//- +linkTemplate042115a('New Arrivals',newArrivalsLink)
-			//- +linkTemplate042115a('Women',womenLink)
-			//- +linkTemplate042115a('Men',menLink)
-			//- +linkTemplate042115a('Accessories',accessoriesLink)
-			//- +linkTemplate042115a('Dress',dressLink)
-			//- +linkTemplate042115a('Sales-Off',saleOffLink)
-			//- +linkTemplate042115a('Lookbook',lookbookLink)
-			//- +linkTemplate042115a('This Week',thisWeekLink)
-		
+		.wrapper		
 			ul
-				//- +linkTemplate033115a('New Arrivals',newArrivalsLink)
-				//- +linkTemplate033115a('Women',womenLink)
-				//- +linkTemplate033115a('Men',menLink)
-				//- +linkTemplate033115a('Accessories',accessoriesLink)
-				//- +linkTemplate033115a('Dress',dressLink)
-				//- +linkTemplate033115a('Sales-Off',saleOffLink)
-				//- +linkTemplate033115a('Lookbook',lookbookLink)
-				//- +linkTemplate033115a('This Week',thisWeekLink)
-
 				+linkTemplate033115a('New Arrivals',newArrivalsLink)
 					li
 						a(href=newArrivalsLink) New Arrivals
+							div.slash
 				+linkTemplate033115a('Women',womenLink)
 					li
 						a(href=womenLink) Women
+							div.slash
 				+linkTemplate033115a('Men',menLink)
 					li
 						a(href=menLink) Men
+							div.slash
 				+linkTemplate033115a('Accessories',accessoriesLink)
 					li
 						a(href=accessoriesLink) Accessories
+							div.slash
 				+linkTemplate033115a('Dress',dressLink)
 					li
 						a(href=dressLink) Dress
+							div.slash
 				+linkTemplate033115a('Sales-Off',saleOffLink)
 					li
 						a(href=saleOffLink) Sales-Off
+							div.slash
 				+linkTemplate033115a('Lookbook',lookbookLink)
 					li
 						a(href=lookbookLink) Lookbook
+							div.slash
 				+linkTemplate033115a('This Week',thisWeekLink)
 					li
 						a(href=thisWeekLink) This Week
+							div.slash
 
 ////////////////////////////////////////////
