--- a/css/company.logo.043015.1.scss
+++ b/css/company.logo.043015.1.scss
@@ -15,6 +15,7 @@ aside.companyLogo {
 	text-align: center;
 }
 
+// YELLOW BAR  ------------------------------------------------
 // the yellow bar
 aside.companyLogo .bar {
 	background: $themeYellow;
@@ -24,25 +25,43 @@ aside.companyLogo .bar {
 	position: relative;
 	z-index:5;
 }
+// // END YELLOW BAR ------------------------------------------------
 
+// SLANTED SLASH  ------------------------------------------------
 // the slanted slash
 // attempt:  div with border rotating
 aside.companyLogo .slash {
-	border: 1px solid black;
-	width: 45%;
-	@include transformRotate(-64deg);
+	// border: 1px solid black;
+	// width: 45%;
+	// @include transformRotate(-64deg);
 
-	position: absolute;
-	top: 48%;
-	left: 26%;
-	// set z-index to -5 to put it behind .bar and .extraShader... you still need .extraShader (if you comment .extraShader out the line appears)
-	z-index: -5;
+	// position: absolute;
+	// top: 48%;
+	// left: 26%;
+	// // set z-index to -5 to put it behind .bar and .extraShader... you still need .extraShader (if you comment .extraShader out the line appears)
+	// z-index: -5;
+
+	// @include desktopR {
+	// 	top: 41.5%;
+	// }
+
+	// @include desktopR {
+	// 	top: 43.5%;
+	// }
+
+	@include companyLogoSlashStyle1(black);
 }
+// // END SLANTED SLASH ------------------------------------------------
 
+// EXTRA SHADER  ------------------------------------------------
+// this extra div is simply used to mask the slanted slash
 aside.companyLogo .extraShader {
 	width: 100%;
 	height: 100%;
 	background: $themeYellow;
 } 
+// // END EXTRA SHADER ------------------------------------------------
+
+
 
 ///////////////////////////////////////////////
