--- a/css/mixins.project.scss
+++ b/css/mixins.project.scss
@@ -5,71 +5,9 @@
 // all mixins that are not universal ones... that are specific to this project are placed here
 // don't forget to include the $ in front of the variables
 
-@mixin navSlantSlash042815a1 ($colour) {
-	// PARENT  ------------------------------------------------
-	// to allow us to hook the slanted slash
-	// position: relative;
-	// z-index: 5;
-	// // END PARENT ------------------------------------------------
-	
-	@include beforeAfterIconPlace042215a('/');
-	position: absolute;
-	color: $colour;
-	font-size: $basefontsize*6;
-	font-weight: 100;
-	
-	// had to set the z-index to -ve negative values to get it behind a link background
-	z-index:-5;
-	// top: -66%;
-	top: -0.5em;
-	left: 26%;
-
-	@include transformRotate(10deg);
-}
-
-@mixin slantSlash042815a1 ($colour) {
-	// PARENT  ------------------------------------------------
-	// to allow us to hook the slanted slash
-	// position: relative;
-	// z-index: 5;
-	// // END PARENT ------------------------------------------------
-	
-	@include beforeAfterIconPlace042215a('/');
-	position: absolute;
-	color: $colour;
-	font-size: $basefontsize*4.5;
-	font-weight: 100;
-	
-	// had to set the z-index to -ve negative values to get it behind a link background
-	z-index:-5;
-	// top: -66%;
-	top: -0.25em;
-	left: 45%;
-
-	@include transformRotate(10deg);
-}
-
-@mixin slantSlash042915a ($colour) {
-	// PARENT  ------------------------------------------------
-	// to allow us to hook the slanted slash
-	// position: relative;
-	// z-index: 5;
-	// // END PARENT ------------------------------------------------
-	
-	@include beforeAfterIconPlace042215a('/');
-	position: absolute;
-	color: $colour;
-	font-size: $basefontsize*17.3;
-	font-weight: 100;
-	
-	// had to set the z-index to -ve negative values to get it behind a link background
-	z-index:-5;
-	// top: -66%;
-	top: -0.55em;
-	left: 35%;
-
-	@include transformRotate(10deg);
-}
+////////////////////////////////////////////
+///// 		GENERAL
+///////////////////////////////////////////////
 
 @mixin themeButton1 {
 	margin:0;
@@ -121,84 +59,7 @@
 	// }
 }
 
-@mixin purchaseShader042815a1 {
-	
-	// html structure
-	// div.purchaseShader
-	// 	p $99
-	// 	a(href='#')
-	// 		div
-	// 			//- the div will hold the before element
-	// 			p Add to Cart
 
-	div.purchaseShader {
-		//flexbox
-		@include flexboxSettings042215a;
-		justify-content: flex-end;
-		align-content: flex-end;
-		align-items: center;
-
-		background: $themeYellow;
-
-		// you need to maximize the width to allow enough space to expand
-		width: 100%;
-		height: auto;
-
-		// positioning
-		position: absolute;
-		top:0;
-		right:0;
-		left:0;
-		bottom:0;
-
-		// default status
-		// before parent:hover
-		// this must come last to override display:flex above
-		display: none;
-
-		a.button {
-			display: block;
-			margin-bottom: 15%;
-		}
-
-		div.button {
-			// refer to @mixin themeButton1
-			@include themeButton1;
-			margin-bottom: 10%;
-			width: 8.8125em;
-
-			// @include transitionEffectAllEaseOut(0.1s);
-
-			&:hover {
-				background: white;
-				color: black;
-			}
-
-			&:hover > p {
-				background: white;
-				color: black;
-				font-weight: bold;
-			}
-
-			&:hover > div.button::before {
-				color: black;
-			}
-		}
-
-		p.price {
-			font-size: $basefontsize*2;
-			margin-bottom: 7%;
-			position: relative;
-
-			span {
-				position: absolute;
-				top:-24%;
-				left:-39%;
-				font-size: $basefontsize*1.3;
-			}
-		}
-	}	
-}
 
 @mixin productDivDimensions042815a1 {
 	// width: 209px;
@@ -223,12 +84,7 @@
 	background-position: center;
 }
 
-@mixin purchaseShaderDisplay042815a {
-	// requires that the parent element have the div.purchaseShader html inside already
-	&:hover > div.purchaseShader {
-		display: flex;
-	}
-}
+
 
 @mixin marginPaddingReset1 {
 	// reset margin, padding in case
@@ -236,14 +92,179 @@
 	padding: 0;
 }
 
-@mixin addToCartShader042915a {
+@mixin colourSelect042915a {
+	// inserted into a div.colourSelect element
+	// a.colour1
+	// a.colour2
+	
+	//flexbox
+	@include flexboxSettings041715a;
+	justify-content: space-around;
+	align-content: space-around;
 
-	// html structure
-	// div.addToCartButton
-	// 	a(href='#').button
-	// 		div.button
-	// 			//- the div will hold the before element
-	// 			p.text Add to Cart
+	// make sure the width is 100% of its parent width
+	width: auto;
+
+	margin-bottom: 10%;
+
+	a.colour1,a.colour2 {
+		//flex child
+		flex: 1 auto;
+		flex: 1 1.75em;
+
+		// TESTING
+		// border: 1px solid blue;
+
+		width: 1.75em;
+		height: 0.75em;
+
+		// the gap between the buttons was .625em... since the margin is on both sides, divide the value in half
+		// margin: 0 .3125em 0 .3125em;
+		// want it flush against the left side
+		margin: 0 .625em 0 0;
+
+		// @include iphone6Minus568R {
+		// 	margin-bottom: 5%;
+		// }
+	}
+
+	// div.colourSelect a.colour1 {
+	// 	//
+	// }
+
+	// div.colourSelect a.colour2 {
+	// 	//
+	// }
+
+	// uses the colours for Abstract Dooted Dress
+	a.colour1 {
+		background: $abstractD1;
+	}
+
+	a.colour2 {
+		background: $abstractD2;
+	}
+}
+
+@mixin pulsingBorder ($colour) {
+	@-webkit-keyframes pulseBorder {
+		0% {
+			border: 1px solid $colour;
+		}
+		25% {
+			border: 3px solid $colour;
+		}
+		50% {
+			border: 5px solid $colour;
+		}
+		75% {
+			border: 7px solid $colour;
+		}
+		100% {
+			border: 10px solid $colour;
+		}
+	}
+}
+
+///////////////////////////////////////////////
+
+
+
+////////////////////////////////////////////
+///// 		SHADERS
+///////////////////////////////////////////////
+
+@mixin purchaseShader042815a1 {
+	
+	div.purchaseShader {
+		//flexbox
+		@include flexboxSettings042215a;
+		justify-content: flex-end;
+		align-content: flex-end;
+		align-items: center;
+
+		background: $themeYellow;
+
+		// you need to maximize the width to allow enough space to expand
+		width: 100%;
+		height: auto;
+
+		// positioning
+		position: absolute;
+		top:0;
+		right:0;
+		left:0;
+		bottom:0;
+
+		// DEFAULT VISIBILITY STATUS
+		// before parent:hover
+		// this must come last to override display:flex above
+		display: none;
+
+		// TESTING
+		// border: 1px solid red;
+
+		a.button {
+			display: block;
+			margin-bottom: 15%;
+		}
+
+		div.button {
+			// refer to @mixin themeButton1
+			@include themeButton1;
+			margin-bottom: 10%;
+
+			// I find using ems still doesn't make it responsive enough
+			width: 8.8125em;
+			// width: 100%;
+
+
+			// @include transitionEffectAllEaseOut(0.1s);
+
+			&:hover {
+				background: white;
+				color: black;
+			}
+
+			&:hover > p {
+				background: white;
+				color: black;
+				font-weight: bold;
+			}
+
+			// this is used for the ::before technique
+			// &:hover > div.button::before {
+			// 	color: black;
+			// }
+
+			&:hover > div.slash {
+				border: 1px solid black;
+			}
+		}
+
+		p.price {
+			font-size: $basefontsize*2;
+			margin-bottom: 7%;
+			position: relative;
+
+			span {
+				position: absolute;
+				top:-24%;
+				left:-39%;
+				font-size: $basefontsize*1.3;
+			}
+		}
+	}	
+}
+
+@mixin purchaseShaderDisplay042815a {
+	// requires that the parent element have the div.purchaseShader html inside already
+	&:hover > div.purchaseShader {
+		display: flex;
+	}
+}
+
+@mixin addToCartShader042915a {
 
 	div.imgShader {
 		//flexbox
@@ -280,19 +301,6 @@
 			margin-bottom: 10%;
 			width: 8.8125em;
 		}
-
-		// p.price {
-		// 	font-size: $basefontsize*2;
-		// 	margin-bottom: 7%;
-		// 	position: relative;
-
-		// 	span {
-		// 		position: absolute;
-		// 		top:-24%;
-		// 		left:-39%;
-		// 		font-size: $basefontsize*1.3;
-		// 	}
-		// }
 	}	
 }
 
@@ -352,77 +360,146 @@
 			background: white;
 			font-weight: bold;
 		}
+
+		&:hover > div.slash {
+			border: 1px solid black;
+		}
 	}
 }
 
-@mixin colourSelect042915a {
-	// inserted into a div.colourSelect element
-	// a.colour1
-	// a.colour2
+///////////////////////////////////////////////
+
+
+////////////////////////////////////////////
+///// 		SLANTED SLASH
+///////////////////////////////////////////////
+
+// the ::before version
+@mixin navSlantSlash042815a1 ($colour) {
+	// PARENT  ------------------------------------------------
+	// to allow us to hook the slanted slash
+	// position: relative;
+	// z-index: 5;
+	// // END PARENT ------------------------------------------------
 	
-	//flexbox
-	@include flexboxSettings041715a;
-	justify-content: space-around;
-	align-content: space-around;
+	@include beforeAfterIconPlace042215a('/');
+	position: absolute;
+	color: $colour;
+	font-size: $basefontsize*6;
+	font-weight: 100;
+	
+	// had to set the z-index to -ve negative values to get it behind a link background
+	z-index:-5;
+	// top: -66%;
+	top: -0.5em;
+	left: 26%;
 
-	// make sure the width is 100% of its parent width
-	width: auto;
+	@include transformRotate(10deg);
+}
 
-	margin-bottom: 10%;
+// the ::before version
+@mixin slantSlash042815a1 ($colour) {
+	// PARENT  ------------------------------------------------
+	// to allow us to hook the slanted slash
+	// position: relative;
+	// z-index: 5;
+	// // END PARENT ------------------------------------------------
+	
+	@include beforeAfterIconPlace042215a('/');
+	position: absolute;
+	color: $colour;
+	font-size: $basefontsize*4.5;
+	font-weight: 100;
+	
+	// had to set the z-index to -ve negative values to get it behind a link background
+	z-index:-5;
+	// top: -66%;
+	top: -0.25em;
+	left: 45%;
 
-	a.colour1,a.colour2 {
-		//flex child
-		flex: 1 auto;
-		flex: 1 1.75em;
+	@include transformRotate(10deg);
+}
 
-		// TESTING
-		// border: 1px solid blue;
+// the ::before version
+@mixin slantSlash042915a ($colour) {
+	// PARENT  ------------------------------------------------
+	// to allow us to hook the slanted slash
+	// position: relative;
+	// z-index: 5;
+	// // END PARENT ------------------------------------------------
+	
+	@include beforeAfterIconPlace042215a('/');
+	position: absolute;
+	color: $colour;
+	font-size: $basefontsize*17.3;
+	font-weight: 100;
+	
+	// had to set the z-index to -ve negative values to get it behind a link background
+	z-index:-5;
+	// top: -66%;
+	top: -0.55em;
+	left: 35%;
 
-		width: 1.75em;
-		height: 0.75em;
+	@include transformRotate(10deg);
+}
 
-		// the gap between the buttons was .625em... since the margin is on both sides, divide the value in half
-		// margin: 0 .3125em 0 .3125em;
-		// want it flush against the left side
-		margin: 0 .625em 0 0;
+// Div version
+// Company Logo
+@mixin companyLogoSlashStyle1 ($borderColour) {
+	border: 1px solid $borderColour;
+	width: 45%;
+	@include transformRotate(-64deg);
+
+	position: absolute;
+	top: 46%;
+	left: 26%;
+	// set z-index to -5 to put it behind .bar and .extraShader... you still need .extraShader (if you comment .extraShader out the line appears)
+	z-index: -5;
+
+	@include desktopR {
+		top: 41.5%;
 	}
 
-	// div.colourSelect a.colour1 {
-	// 	//
-	// }
-
-	// div.colourSelect a.colour2 {
-	// 	//
-	// }
-
-	// uses the colours for Abstract Dooted Dress
-	a.colour1 {
-		background: $abstractD1;
-	}
-
-	a.colour2 {
-		background: $abstractD2;
+	@include desktopR {
+		top: 43.5%;
 	}
 }
 
-@mixin pulsingBorder ($colour) {
-	@-webkit-keyframes pulseBorder {
-		0% {
-			border: 1px solid $colour;
-		}
-		25% {
-			border: 3px solid $colour;
-		}
-		50% {
-			border: 5px solid $colour;
-		}
-		75% {
-			border: 7px solid $colour;
-		}
-		100% {
-			border: 10px solid $colour;
-		}
+// Div version
+@mixin slantedSlash043015a {
+	// this was the version used for the nav menu
+	// typically used for a div.slash
+	// you may have to use a very specific selector set or override any backgrounds or colour
+	
+	// DEFAULT
+	// comment out to disable and style easily
+	display: none;
+
+	border: 1px solid black;
+	background: none;
+	width: 37%;
+	// need to set the height to zero to make sure only the border remains
+	height:0;
+	@include transformRotate(-64deg);
+
+	position: absolute;
+	top: 39%;
+	left: 17%;
+	// set z-index to -5 to put it behind .bar and .extraShader... you still need .extraShader (if you comment .extraShader out the line appears)
+	z-index: -5;
+
+	@include desktopR {
+		top: 41.5%;
+	}
+
+	@include desktopR {
+		top: 43.5%;
 	}
 }
+
+///////////////////////////////////////////////
+
+
+
 
 ///////////////////////////////////////////////
